--- a/public/default/css/eskuma.css
+++ b/public/default/css/eskuma.css
@@ -22,6 +22,9 @@ form.register-wthree .form-control {
     font-size: 1.7em;
     color: #26752b;
 }
+h3 {
+    color: #26752b;
+}
 
 .alert{
     border-radius: 10px;
@@ -42,6 +45,10 @@ form.register-wthree .form-control {
     h5.cont-form {
         font-size: 1.5em;
     }
+    .paxmp {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        margin-top: 10px;
+    }
 }
 
 @media screen and (max-width: 414px) {
@@ -52,7 +59,7 @@ form.register-wthree .form-control {
     form.register-wthree .form-control {
         padding: 7px 20px;
         font-size: 0.85em;
-    }
+    }   
 }
 
 /* -- //Responsive code -- */
