--- a/public/default/css/head&foot.css
+++ b/public/default/css/head&foot.css
@@ -78,7 +78,7 @@
 }
 
 .nav-link:hover {
-    color: #26752b;
+    color: #26752b !important;
     background-color: #fff;
 }
 .dropdown-item:hover {
@@ -102,7 +102,7 @@
         margin-top: 5px;
       }
     
-      .boxer {
+  .boxer {
         background: #26752b;;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
         color: #FFFFFF !important;
@@ -124,7 +124,7 @@
     }
     
     .nav-link:hover {
-        color: #26752b;
+        color: #26752b !important;
         background-color: #fff;
     }
     .dropdown-item:hover {
