--- a/public/default/css/main.css
+++ b/public/default/css/main.css
@@ -54,3 +54,17 @@ h2 {
   color: #000;
   text-decoration: none !important;
 }
+
+.btr {
+  background: royalblue;
+  border: none;
+  color: #fff;
+  margin: 20px auto;
+  display: block;
+  font-size: 1.3rem;
+  cursor: pointer;
+  outline: none;
+  transition: .3s;
+  padding: 8px 12px;
+  border-radius: 50px;
+}
