--- a/public/default/css/about.css
+++ b/public/default/css/about.css
@@ -4,13 +4,11 @@
     text-transform: uppercase;
 }
 
- h1
-{
-     font-size: 32px;
-     text-transform: uppercase;
-    
-     position: relative;
-     padding-bottom: 10px;
-     text-align: center;
-     color: #ffffff;
+h1 {
+    font-size: 32px;
+    text-transform: uppercase;
+    position: relative;
+    padding-bottom: 10px;
+    text-align: center;
+    color: #ffffff;
 }
