--- a/public/default/css/donate.css
+++ b/public/default/css/donate.css
@@ -1,90 +1,89 @@
 body {
-	padding: 0;
-	margin: 0;
-	background: #ffffff;
+    padding: 0;
+    margin: 0;
+    background: #fff
 }
 
 #about {
-    background: #eee !important;
-    padding: 60px 0 30px 0;
+    background: #eee!important;
+    padding: 60px 0 30px
 }
 
 #about .about-img {
-  overflow: hidden;
+    overflow: hidden
 }
 
 #about .about-img img {
-  margin-left: -15px;
-  max-width: 100%;
+    margin-left: -15px;
+    max-width: 100%
 }
 
-@media (max-width: 768px) {
-  #about .about-img {
-    height: auto;
-  }
-  #about .about-img img {
-    margin-left: 0;
-    padding-bottom: 30px;
-  }
+@media(max-width:768px) {
+    #about .about-img {
+        height: auto
+    }
+    #about .about-img img {
+        margin-left: 0;
+        padding-bottom: 30px
+    }
 }
 
 #about .content h2 {
-  color: #0c2e8a;
-  font-weight: 700;
-  font-size: 36px;
-  font-family: "Raleway", sans-serif;
+    color: #0c2e8a;
+    font-weight: 700;
+    font-size: 36px;
+    font-family: raleway, sans-serif
 }
 
 #about .content h3 {
-  color: #555;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 26px;
-  font-style: italic;
+    color: #555;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 26px;
+    font-style: italic
 }
 
 #about .content p {
-  line-height: 26px;
+    line-height: 26px
 }
 
 #about .content p:last-child {
-  margin-bottom: 0;
+    margin-bottom: 0
 }
 
 #about .content i {
-  font-size: 20px;
-  padding-right: 4px;
-  color: #26752b;
+    font-size: 20px;
+    padding-right: 4px;
+    color: #26752b
 }
 
 #about .content ul {
-  list-style: none;
-  padding: 0;
+    list-style: none;
+    padding: 0
 }
 
 #about .content ul li {
-  padding-bottom: 10px;
-}
-#breadCrumb
-{
-    background: #26752b; !important;
-    padding: 60px 0 30px 0;
-     clear: both;
-     color: rgba(40, 167, 69, 1);
-     margin: 0;
-     min-height: 2vh;
-     padding: 0.5em 0;
-     width: 100%;
+    padding-bottom: 10px
 }
 
-#breadCrumb h2 
-{
-     font-family: inderRegular;
-     font-size: 32px;
-     text-transform: uppercase;
-     font-weight: 700;
-     position: relative;
-     padding-bottom: 10px;
-     text-align: center;
-     color: #ffffff;
+#breadCrumb {
+    background: #26752b !important;
+    padding: 60px 0 30px;
+    clear: both;
+    color: #28a745;
+    margin: 0;
+    min-height: 2vh;
+    padding: .5em 0;
+    width: 100%
+}
+
+#breadCrumb h2 {
+    font-family: inderRegular;
+    font-size: 32px;
+    text-transform: uppercase;
+    font-weight: 700;
+    position: relative;
+    padding-bottom: 10px;
+    text-align: center;
+    color: #fff
 }
