--- a/public/default/css/excos.css
+++ b/public/default/css/excos.css
@@ -1,28 +1,68 @@
 body {
-	padding: 0;
-	margin: 0;
-	background: #ffffff;
+    padding: 0;
+    margin: 0;
+    background: #ffffff;
 }
 
- #exbased
-{
-     background-color: #26752b;
-     clear: both;
-     color: rgba(200, 200, 200, 1);
-     margin: 0;
-     min-height: 2vh;
-     padding: 0.5em 0;
-     width: 100%;
+#exbased {
+    background-color: #26752b;
+    clear: both;
+    color: rgba(200, 200, 200, 1);
+    margin: 0;
+    min-height: 2vh;
+    padding: 0.5em 0;
+    width: 100%;
 }
 
-#exbased h2 
-{
-     font-family: inderRegular;
-     font-size: 32px;
-     text-transform: uppercase;
-     font-weight: 700;
-     position: relative;
-     padding-bottom: 10px;
-     text-align: center;
-     color: #ffffff;
+#exbased h2 {
+    font-family: inderRegular;
+    font-size: 32px;
+    text-transform: uppercase;
+    font-weight: 700;
+    position: relative;
+    padding-bottom: 10px;
+    text-align: center;
+    color: #ffffff;
+}
+
+.card {
+    display: block;
+    padding-left: 10px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 20px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    transition: box-shadow 0.25s;
+}
+
+.card-content {
+    padding: 15px;
+    text-align: left;
+}
+
+.card-title {
+    margin-top: 0px;
+    font-weight: 600;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    text-align: center;
+    font-size: 1.45em;
+}
+
+.card-title a {
+    color: #000;
+    text-decoration: none !important;
+}
+
+.h1 {
+    margin-top: 30px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 130%;
+    color: #26752b;
+    text-align: center;
 }
