--- a/public/default/css/main.css
+++ b/public/default/css/main.css
@@ -1,70 +1,77 @@
 body {
-	padding: 0;
-	margin: 0;
-	background: #ffffff;
+    padding: 0;
+    margin: 0;
+    background: #ffffff;
 }
 
 h2 {
-	font-weight: 600; 
-	font-size: 28px; 
-	line-height: 130%; 
-	color: #11092C;
-	text-align: center;
-	 }
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 130%;
+    color: #11092c;
+    text-align: center;
+}
 
 .card {
-  display: block; 
+    display: block;
     margin-bottom: 20px;
     line-height: 1.42857143;
     background-color: #fff;
     border-radius: px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); 
-    transition: box-shadow .25s; 
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    transition: box-shadow 0.25s;
 }
+
 .card:hover {
-  box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
 .img-card {
-  width: 100%;
-  height:200px;
-  border-top-left-radius:2px;
-  border-top-right-radius:2px;
-  display:block;
+    width: 100%;
+    height: 200px;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    display: block;
     overflow: hidden;
 }
-.img-card img{
-  width: 100%;
-  height: 200px;
-  object-fit:cover; 
-  transition: all .25s ease;
-} 
+
+.img-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    transition: all 0.25s ease;
+}
+
 .card-content {
-  padding:15px;
-  text-align:left;
+    padding: 15px;
+    text-align: left;
 }
+
 .card-title {
-  margin-top:0px;
-  font-weight: 500;
-  font-size: 1.40em;
+    margin-top: 0px;
+    font-weight: 500;
+    font-size: 1.4em;
 }
+
 .desc {
-	font-family: 'Times New Roman', Times, serif;
+    font-family: "Times New Roman", Times, serif;
 }
+
 .card-title a {
-  color: #000;
-  text-decoration: none !important;
+    color: #000;
+    text-decoration: none !important;
 }
 
 .btr {
-  background: royalblue;
-  border: none;
-  color: #fff;
-  margin: 20px auto;
-  display: block;
-  font-size: 1.3rem;
-  cursor: pointer;
-  outline: none;
-  transition: .3s;
-  padding: 8px 12px;
-  border-radius: 50px;
+    background: royalblue;
+    border: none;
+    color: #fff;
+    margin: 20px auto;
+    display: block;
+    font-size: 1.3rem;
+    cursor: pointer;
+    outline: none;
+    transition: 0.3s;
+    padding: 8px 12px;
+    border-radius: 50px;
 }
