--- a/public/default/css/media.css
+++ b/public/default/css/media.css
@@ -3,9 +3,9 @@
 }
 
 body {
-	padding: 0;
-	margin: 0;
-	background: #ffffff;
+    padding: 0;
+    margin: 0;
+    background: #ffffff;
 }
 
 .btn-primary:hover,
@@ -45,7 +45,7 @@ section .section-title {
     -o-transform: rotateY(0deg);
     -ms-transform: rotateY(0deg);
     transform: rotateY(0deg);
-    border-radius: .25rem;
+    border-radius: 0.25rem;
 }
 
 .image-flip:hover .frontside,
@@ -129,4 +129,46 @@ section .section-title {
     width: 120px;
     height: 120px;
     border-radius: 50%;
+}
+
+.card {
+    display: block;
+    padding-left: 10px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 20px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    transition: box-shadow 0.25s;
+}
+
+.card-content {
+    padding: 15px;
+    text-align: left;
+}
+
+.card-title {
+    margin-top: 0px;
+    font-weight: 600;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    text-align: center;
+    font-size: 1.45em;
+}
+
+.card-title a {
+    color: #000;
+    text-decoration: none !important;
+}
+
+.h1 {
+    margin-top: 30px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 130%;
+    color: #26752b;
+    text-align: center;
 }
