--- a/public/default/css/head&foot.css
+++ b/public/default/css/head&foot.css
@@ -157,9 +157,9 @@
     padding-bottom: 12px;
 }
 
-.foot a {
+.foot a:hover {
     font-size: 13px;
-    color: #fff;
+    color: #fff !important;
     border-bottom: 1px solid #262c44;
     padding: 5px 0;
 }
